# block-api

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: database.py  main.py  schema.py
app/core/: config.py
tests/: test_main.py
