[tool.poetry]
name = "block-api"
version = "0.1.0"
description = "Retrieve information about blocks and signatures on the Ethereum mainnet"
authors = ["Martin Matousek <martin.matousek@outlook.com>"]
readme = "README.md"
packages = [{include = "block_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
sqlalchemy = "^1.4.45"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"
mypy = "^0.991"
autoflake = "^2.0.0"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
types-requests = "^2.28.11.5"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
